Backend and DB script creation refactoring after API changes. Frontend resources to use "key" value. Tests commented, WIP
