# marketplace-service/src/main/java/ch/akros/marketplace/service/entity/FieldOption.java
@@ -25,22 +25,22 @@ import lombok.ToString;
 @NoArgsConstructor
 @AllArgsConstructor
 @ToString
-@Table(name = "FIELD_TYPE_CHOOSE")
-public class FieldTypeChoose {
+@Table(name = "FIELD_OPTION")
+public class FieldOption {
   @Id
-  @Column(name = "FIELD_TYPE_CHOOSE_ID", nullable = false, unique = true)
+  @Column(name = "FIELD_OPTION_ID", nullable = false, unique = true)
   @GeneratedValue(strategy = GenerationType.IDENTITY)
-  private Long      fieldTypeChooseId;
+  private Long      fieldTypeOptionId;
 
-  @Column(name = "DESCRIPTION")
-  private String    description;
+  @Column(name = "KEY")
+  private String    key;
 
   @Column(name = "SORT_NUMBER")
   private int       sortNumber;
 
   @ManyToOne
   @ToString.Exclude
-  @JoinColumn(referencedColumnName = "FIELD_TYPE_ID", name = "FIELD_TYPE_ID",
-      foreignKey = @ForeignKey(name = "FIELD_TYPE_CHOOSE_FIELD_TYPE_FK"))
-  private FieldType fieldType;
+  @JoinColumn(referencedColumnName = "FIELD_ID", name = "FIELD_ID",
+      foreignKey = @ForeignKey(name = "FIELD_OPTION_FIELD_FK"))
+  private Field field;
 }
